--- a/Css/Stylesheet.css
+++ b/Css/Stylesheet.css
@@ -19,10 +19,10 @@ footer{
 }
 
 body{
-    background-color: white;
-    margin: 0;
-    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: white;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
@@ -41,8 +41,8 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   background-color: purple;
+  overflow: hidden;
 }
 
 ul li {
@@ -58,7 +58,7 @@ ul li a {
   text-decoration: none;
 }
 
-ul li a:hover:not(.active) {
+ul li a:hover{
   background-color: yellow;
   color:black;
 }
@@ -81,10 +81,21 @@ span {
 img {
     display: block;
     max-width: 100%;
+    width: 40%;
     height: auto;
   }
 
-.picturel{
+iframe{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    max-width: 100%;
+    padding: 0px;
+}
+
+
+#left{
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -94,7 +105,7 @@ img {
     padding: 0px;
 }
 
-.picturel:hover{
+#left:hover{
     transform: scaleX(-1);
 }
 
@@ -107,7 +118,7 @@ img {
     background-color: dodgerblue;
     padding: 25px;
     margin: 0;
-    flex: 25%;
+    flex: 30%;
     min-height: auto;
 }
 
@@ -115,7 +126,7 @@ img {
     background-color: white;
     padding: 25px;
     margin: 0;
-    flex: 75%;
+    flex: 70%;
     min-height: auto;
     position: static;
 }
@@ -124,5 +135,65 @@ img {
 @media (max-width: 676px) {
   .flex-container, nav, li, section {
     flex-direction: column;
+    width: auto;
   }
+}
+
+.btn {
+  background-color: #f80b0b;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.7 ;
+  transition: 1s;
+}
+
+.btn:hover {
+  background-color: #04AA6D;
+  opacity: 1;
+  color:black;
+}
+
+input {
+    background-color:whitesmoke;
+    color:black
+}
+
+table { 
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    border: 5px;
+    text-align:left;
+    border-style: solid;
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: none;
+    padding: 0px;
+}
+
+td {
+    margin: 5px;
+
+}
+
+textarea {
+height: 200px;
+padding: 5px 5px;
+}
+
+input[type="text"], input[type="email"], textarea, select:active {
+  color:blue
+}
+
+input[type="text"], input[type="email"], textarea, select, button {
+display: block;
+margin: 5px 5px;
+width: 100%;
+box-sizing: border-box;
+border-radius: 4px;
+box-shadow: none;
 }
