--- a/Css/Stylesheet.css
+++ b/Css/Stylesheet.css
@@ -1,5 +1,5 @@
-html, body {
-  overflow-x:hidden 
+html, body{
+  overflow-x: hidden;
 }
 
 header{
@@ -139,66 +139,6 @@ iframe{
 @media (max-width: 676px) {
   .flex-container, nav, li, section {
     flex-direction: column;
-    width: auto;
     font-size: 0.9em;
   }
-}
-
-.btn {
-  background-color: #f80b0b;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  font-size: 16px;
-  margin: 4px 2px;
-  opacity: 0.7 ;
-  transition: 1s;
-}
-
-.btn:hover {
-  background-color: #04AA6D;
-  opacity: 1;
-  color:black;
-}
-
-input {
-    background-color:whitesmoke;
-    color:black
-}
-
-table { 
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    border: 5px;
-    text-align:left;
-    border-style: solid;
-    box-sizing: border-box;
-    border-radius: 4px;
-    box-shadow: none;
-    padding: 0px;
-}
-
-td {
-    margin: 5px;
-
-}
-
-textarea {
-height: 200px;
-padding: 5px 5px;
-}
-
-input[type="text"], input[type="email"], textarea, select:active {
-  color:blue
-}
-
-input[type="text"], input[type="email"], textarea, select, button {
-display: block;
-margin: 5px 5px;
-width: 100%;
-box-sizing: border-box;
-border-radius: 4px;
-box-shadow: none;
 }
