--- a/Css/Stylesheet.css
+++ b/Css/Stylesheet.css
@@ -1,10 +1,10 @@
-* {
+*{
   box-sizing: border-box;
 }
 
 header{
     width: auto;
-    padding: 10px;
+    padding: 50px;
     margin-top: 0px;
     min-height: 200px;
     background-color: rgb(135, 89, 184);
@@ -33,7 +33,7 @@ section{
     display: flex;
 }
 
-ul {
+ul{
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -41,12 +41,12 @@ ul {
   overflow: hidden;
 }
 
-ul li {
+ul li{
   float: left;
   margin-left: 0px;
 }
 
-ul li a {
+ul li a{
   display: block;
   color: white;
   text-align: center;
@@ -56,10 +56,10 @@ ul li a {
 
 ul li a:hover{
   background-color: yellow;
-  color:black;
+  color: black;
 }
 
-hr { 
+#hoofd{ 
     background-color: orange;
     height: 5px;
     border-style: none;
@@ -70,11 +70,11 @@ hr {
     Height: 5px;
 }
 
-span {
+span{
     color: orange;
 }
 
-img {
+img{
     display: block;
     max-width: 100%;
     width: 40%;
@@ -87,9 +87,51 @@ iframe{
     margin-right: auto;
     width: 90%;
     max-width: 100%;
+    height: 425px;
     padding: 0px;
+    border: 0;
 }
 
+.flex-container{
+  display: flex;
+  flex-direction: row;
+}
+
+.left{
+    background-color: dodgerblue;
+    padding: 25px;
+    margin: 0;
+    flex: 30%;
+    min-height: auto;
+}
+
+.main{
+    background-color: white;
+    padding: 25px;
+    margin: 0;
+    flex: 70%;
+    min-height: auto;
+}
+
+.btn{
+  background-color: #f80b0b;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  font-size: 15px;
+  margin: 4px 2px;
+  opacity: 0.7 ;
+  transition: 1s;
+  max-width: 150px;
+}
+
+.btn:hover{
+  background-color: #04AA6D;
+  opacity: 1;
+  color: black;
+}
 
 #left{
     display: block;
@@ -101,40 +143,58 @@ iframe{
     padding: 0px;
 }
 
-.flex-container {
-  display: flex;
-  flex-direction: row;
+#hannah{
+  float: right;
+  width: 225px;
+  height: auto;
 }
 
-.left {
-    background-color: dodgerblue;
-    padding: 25px;
-    margin: 0;
-    flex: 30%;
-    min-height: auto;
+#jesse{
+  float: left;
+  width: 300px;
+  height: auto;
 }
 
-.main {
-    background-color: white;
-    padding: 25px;
-    margin: 0;
-    flex: 70%;
-    min-height: auto;
-}
-
-/* Responsive layout - makes a one column-layout instead of two-column layout */
-@media (max-width: 676px) {
+@media (max-width: 676px){
   .flex-container, nav, li, section {
     flex-direction: column;
-    font-size: 0.9em;
   }
 }
 
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 676px) {
+@media (max-width: 676px){
 .main, li {
     width: 100%;
     height: auto;
   }
 }
 
+form{
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+label{display: block;}
+
+input[type=text],  input[type="email"], textarea, select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color: whitesmoke;
+  opacity: 0.7;
+  color: black
+}
+
+input[type="text"], input[type="email"], textarea, select:active {
+  color: black
+}
+
+textarea {
+height: 200px;
+padding: 5px 5px;
+}
