--- a/Css/Stylesheet.css
+++ b/Css/Stylesheet.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+h1,h2,h3,h4,h5,h6{
+  font-size: auto;
+}
+
 header{
     width: auto;
     padding: 50px;
@@ -198,3 +202,4 @@ textarea {
 height: 200px;
 padding: 5px 5px;
 }
+
