--- a/Css/Stylesheet.css
+++ b/Css/Stylesheet.css
@@ -2,8 +2,8 @@
   box-sizing: border-box;
 }
 @media (max-width: 676px){
-h1,h2,h3,h4,h5,h6,nav{
-  font-size: 90%;
+h1{
+  font-size: auto;
 }
 }
 
@@ -203,6 +203,7 @@ textarea {
 height: 200px;
 padding: 5px 5px;
 }
+
 
 
 
